--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   image_picker: ^0.8.4+4
+  image_cropper: ^1.4.1
 
 dev_dependencies:
   flutter_test:
