--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^0.13.4
   image_picker: ^0.8.4+4
   image_cropper: ^1.4.1
+  percent_indicator: ^3.4.0
 
 dev_dependencies:
   flutter_test:
