--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   image_picker: ^0.8.4+4
   image_cropper: ^1.4.1
   percent_indicator: ^3.4.0
+  rounded_loading_button: ^2.0.9
 
 dev_dependencies:
   flutter_test:
